[metadata]
name = simple-steganography
version = 1.0.2.1
author = Karafra
author_email = dariusKralovic@protonmail.com
url = https://github.com/karafra/steg-utility/
description = Simple command line utility for steganography
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
license_file = LICENSE
platform = any
keywords = steganography, cli, utility
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Reports = https://github.com/karafra/steg-utility/issues
    Changelog = https://github.com/karafra/steg-utility/blob/master/CHANGELOG.md
    Source Code = https://github.com/karafra/steg-utility/

[options]
zip_safe = true
python_requires = >= 3.8.10
package_dir = 
    simple_steganography=src
setup_requires =
    wheel
    setuptools >= 46.4.0
install_requires =
    opencv-python
    numpy
tests_require = 
    mockito
    coverage

[options.entry_points]
console_scripts = 
    simple-steganography = src.__main__:run

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
